flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -246,7 +246,7 @@
   }
 }
 
-@media only screen and (min-width:968px){
+@media only screen and (min-width:768px){
   .sub_menu_wrap{
     &.items-2,&.items-3,&.items-4,&.items-5,&.items-6{
       ul.sub_menu{
